--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
   
   <link rel="canonical" href="http://hyace.github.io">
-  <link href="/favicon.png" rel="icon">
+  <link href="/favicon.png" rel="shortcut icon">
   <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css">
   <link href="/atom.xml" rel="alternate" title="Hyace" type="application/atom+xml">
   <script src="/javascripts/modernizr-2.0.js"></script>
